<resources>
    <string name="app_name" translatable="false">PlaylistMaker</string>
    <string name="toolbar_app_name" translatable="false">Playlist maker</string>
    <string name="search_button">Search</string>
    <string name="media_library_button">Library</string>
    <string name="settings">Settings</string>
    <string name="dark_theme_button">Dark theme</string>
    <string name="share_button">Share the application</string>
    <string name="support_button">Write to support</string>
    <string name="user_agreement">User agreement</string>

</resources>